--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ Donec mollis sollicitudin:
 </div>
 <div class="content">
   
-    AICS Summer Intern 官網投的，投完後一天寄線上coding測試給我，我覺得我寫的沒啥問題，但是就沒消息ㄌ QQ 考三題，有一題看不太懂題目，但還是勉強寫出來，且測資都有過
+    Line 2022 Tech Fresh Summer Class 官網投的 投完大概1-2個月後才寄信給我，主要是約面試時間&amp;在一周內要求做一個自我介紹的chatbot出來 再來就是面試 我面的時候 是有
   
 </div>
 
@@ -389,7 +389,7 @@ Donec mollis sollicitudin:
     </div>
     <div class="mr-6 my-2">
         <i class="fas fa-clock mr-1"></i>
-        <span>3 min read</span>
+        <span>5 min read</span>
     </div>
     
     
